# agrohack24-review

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  train.ipynb  weather.ipynb
backend/: README.md  main.py  model.py  prepare_weather.py  pyproject.toml
backend/weights/: embeddings.json  weights.cbm
src/: App.jsx  index.css
src/domain/: phenotypes.js
src/pages/: index.jsx
